--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -1,19 +1,23 @@
 /*
- * This is a manifest file that'll automatically include all the stylesheets available in this directory
- * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
- * the top of the compiled file, but it's generally better to create a new file per style scope.
- *= require web-app-theme/base
- *= require web-app-theme/themes/default/style.css
- *= require active_scaffold
- *= require_self
+* This is a manifest file that'll automatically include all the stylesheets available in this directory
+* and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
+* the top of the compiled file, but it's generally better to create a new file per style scope.
+*= require web-app-theme/base
+*= require web-app-theme/themes/default/style.css
+*= require active_scaffold
+*= require_self
 */
 
 #main .block .content h2 {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 #main .block .content .active-scaffold-header h2 {
-    font-size: 200%;
+  font-size: 200%;
+}
+
+#main .active-scaffold th a {
+  text-shadow: none;
 }
 
 .flash .alert {
