--- a/app/views/fragments/_bottom.html.erb
+++ b/app/views/fragments/_bottom.html.erb
@@ -1,5 +1,5 @@
 <div id="footer">
   <div class="block">
-    <p>Copyright &copy; <%= Time.now.year %> Nicolae Claudis</p>
+    <p>Copyright &copy; <%= Time.now.year %> Nicolae Claudius</p>
   </div>      
 </div>
