--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
       <%= render :partial => 'fragments/top' %>
       <div id="wrapper" class="wat-cf">
         <%= flash_display 'flash' %>
-        <div id="main">
+        <div id="main" style="width: 100%;">
           <div class="block">
             <div class="secondary-navigation">
               <ul class="wat-cf">
-                <li><a href="#">Manage</a></li>
+                <li><a href="#">&nbsp;</a></li>
               </ul>
             </div>
             <div class="content">
@@ -26,7 +26,6 @@
             </div>
           </div>
         </div>
-        <%= render :partial => 'fragments/sidebar' %>
       </div>
       <%= render :partial => 'fragments/bottom' %>
     </div>
