--- a/app/views/fragments/_top.html.erb
+++ b/app/views/fragments/_top.html.erb
@@ -1,28 +1,32 @@
 <div id="header">
-  <h1><a href="/">Simple DNS</a></h1>
-  <div id="main-navigation">
-    <ul class="wat-cf">
-      <% if user_signed_in? %>
-        <li><%= link_to('Dashboard', dashboard_path, :data => {:pjax => '#main'}) %></li>
-        <li><%= link_to 'Domains', domains_path, :data => {:pjax => '#main'} %></li>
-      <% else %>
-        <li><%= link_to('Home', root_path, :data => {:pjax => '#main'}) %></li>
-        <li><%= link_to('About', root_path, :data => {:pjax => '#main'}) %></li>
-      <% end %>
-    </ul>
-  </div>
-  <div id="user-navigation">
-    <ul class="wat-cf">
-      <% if user_signed_in? %>
-        <li><%= link_to(current_user.email, edit_user_registration_path, :data => {:pjax => '#main'}) %></li>
-        <li><%= link_to('Sign out', destroy_user_session_path, :method => :delete) %></li>
-      <% else %>
-        <li><%= link_to('Sign up', new_user_registration_path, :data => {:pjax => '#main'}) %></li>
-        <li><%= link_to('Sign in', new_user_session_path, :data => {:pjax => '#main'}) %></li>
-      <% end %>
-    </ul>
-  </div>
-  <div id="main-navigation">
-    <ul class="wat-cf"></ul>
+  <div class="header-inner">
+    <h1><a href="/">Simple DNS</a></h1>
+    <div id="main-navigation">
+      <ul class="wat-cf">
+        <% if user_signed_in? %>
+          <li><%= link_to('Dashboard', dashboard_path, :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to 'Domains', domains_path, :data => {:pjax => '#main'} %></li>
+          <li><%= link_to('Help & Support', root_path, :data => {:pjax => '#main'}) %></li>
+        <% else %>
+          <li><%= link_to('Home', root_path, :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('About us', root_path, :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('Help & Support', root_path, :data => {:pjax => '#main'}) %></li>
+        <% end %>
+      </ul>
+    </div>
+    <div id="user-navigation">
+      <ul class="wat-cf">
+        <% if user_signed_in? %>
+          <li><%= link_to(current_user.email, edit_user_registration_path, :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('Sign out', destroy_user_session_path, :method => :delete) %></li>
+        <% else %>
+          <li><%= link_to('Sign up', new_user_registration_path, :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('Sign in', new_user_session_path, :data => {:pjax => '#main'}) %></li>
+        <% end %>
+      </ul>
+    </div>
+    <div id="main-navigation">
+      <ul class="wat-cf"></ul>
+    </div>
   </div>
 </div>
