records link on empty, marketing, styles etc

--- a/app/views/home/_headlines.html.erb
+++ b/app/views/home/_headlines.html.erb
@@ -1,4 +1,4 @@
-<h2>Free, no hassle service you can use right away</h2>
+<h2>Hassle-free service you can use right away</h2>
 
 <p>
   We're System Administrators who built Simple DNS to fill our own needs.
