--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,9 @@
   <div class="content">
     <div class="inner marketing-inner">
 
-      <h1>A DNS service created by sysadmins for sysadmins</h1>
+      <h1>A free service created by sysadmins for sysadmins</h1>
 
-      <table>
+      <table class="marketing-duo">
         <tr>
           <td class="marketing-text">
             <%= render :partial => 'headlines' %>
