--- a/app/assets/stylesheets/marketing.css.scss
+++ b/app/assets/stylesheets/marketing.css.scss
@@ -34,6 +34,10 @@
     position: relative;
 }
 
+.marketing-duo td {
+    vertical-align: top;
+}
+
 #main.marketing-main {
     margin-left: auto;
     margin-right: auto;
@@ -41,7 +45,11 @@
     
     .block .content .marketing-inner {
         padding: 0 30px 30px;
+        h2 {
+            font-size: 25px;
+        }
         p {
+            font-size: 18px;
             line-height: 1em;
             color: #555;
         }
@@ -60,7 +68,7 @@
     }
     
     li {
-        font-size: 16px;
+        font-size: 18px;
     }
     
     .action {
