--- a/app/views/fragments/_bottom.html.erb
+++ b/app/views/fragments/_bottom.html.erb
@@ -1,5 +1,10 @@
 <div id="footer">
   <div class="block">
-    <p>Copyright &copy; <%= Time.now.year %> Nicolae Claudius</p>
+    <p>
+      <a href="#">Terms</a>
+      <a href="#">Privacy</a>
+      <a href="#">Contact</a>
+      &copy; <%= Time.now.year %> Nicolae Claudius
+    </p>
   </div>      
 </div>
