--- a/app/views/home/_headlines.html.erb
+++ b/app/views/home/_headlines.html.erb
@@ -24,6 +24,7 @@
 <div class="action">
 
   <%= link_to new_user_registration_path, :style => 'text-decoration: none' do %>
+    <%= image_tag 'marketing/arrow_left.png' %>
     <button>
       <strong>Create an Account Now</strong><br>
       <em>It's free, sign up in 60 seconds.</em>
