error pages, refactor

--- a/app/assets/stylesheets/overrides.css.erb
+++ b/app/assets/stylesheets/overrides.css.erb
@@ -14,6 +14,10 @@
   text-shadow: none;
 }
 
+body.errors #main .inner {
+  margin-top: 15px;
+}
+
 .flash .alert {
     border: 1px solid #bb9004;
     background: #f9c006 url(<%=  asset_path("web-app-theme/themes/default/images/messages/warning.png") %>) no-repeat 10px center;
