--- a/app/views/domains/_list_record_columns.html.erb
+++ b/app/views/domains/_list_record_columns.html.erb
@@ -1,3 +1,5 @@
+<%# meaningful names for empty columns instead tiny dash "-" %>
+
 <% columns.each do |column| %>
   <% authorized = record.authorized_for?(:crud_type => :read, :column => column.name) -%>
   <% column_value = authorized ? get_column_value(record, column) : active_scaffold_config.list.empty_field_text -%>
