--- a/app/assets/stylesheets/marketing.css.scss
+++ b/app/assets/stylesheets/marketing.css.scss
@@ -19,6 +19,7 @@
         padding: 0 30px 30px;
         h2 {
             font-size: 25px;
+            margin-top: 0;
         }
         p {
             font-size: 18px;
