--- a/app/views/fragments/_top.html.erb
+++ b/app/views/fragments/_top.html.erb
@@ -1,6 +1,6 @@
 <div id="header">
   <div class="header-inner">
-    <h1><a href="/">Simple DNS</a></h1>
+    <h1><a href="/">Entry DNS</a></h1>
     <div id="main-navigation">
       <ul class="wat-cf">
         <% if user_signed_in? %>
