--- a/app/assets/stylesheets/overrides.css.erb
+++ b/app/assets/stylesheets/overrides.css.erb
@@ -20,5 +20,5 @@ body.errors #main .inner {
 
 .flash .alert {
     border: 1px solid #bb9004;
-    background: #f9c006 url(<%=  asset_path("web-app-theme/themes/default/images/messages/warning.png") %>) no-repeat 10px center;
+    background: #f9c006 url(<%= asset_path("messages/warning.png") %>) no-repeat 10px center;
 }
