--- a/app/assets/stylesheets/marketing.css.scss
+++ b/app/assets/stylesheets/marketing.css.scss
@@ -55,10 +55,10 @@
             // @include slick-black;
             @include cupid-green;
             
-            width: 300px;
-            height: 60px;
+            width: 250px;
+            height: 50px;
             margin: auto;
-            font-family: "MuseoSans500", helvetica, arial, sans-serif;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             strong {
                 font-size: 18px;
                 font-weight: bold;
