--- a/app/assets/stylesheets/theme/default.css.erb
+++ b/app/assets/stylesheets/theme/default.css.erb
@@ -336,7 +336,7 @@ hr {
 }
 .flash .warning {
   border: 1px solid #bb9004;
-  background: #f9c006 url(<%= asset_path("messages/warning.png") %> no-repeat 10px center;
+  background: #f9c006 url(<%= asset_path("messages/warning.png") %>) no-repeat 10px center;
 }
 .flash .notice {
   color: #28485e;
