--- a/app/assets/stylesheets/theme/default.css.erb
+++ b/app/assets/stylesheets/theme/default.css.erb
@@ -7,7 +7,6 @@ body {
 h1, h2, h3 {
   color: #111111;
   font-weight: normal;
-  font-family: Cambria, Georgia, serif;
 }
 
 a:link, a:visited, a:hover, a:active {
@@ -36,6 +35,7 @@ hr {
   float: left;
   font-size: 40px;
   font-style: normal;
+  font-weight: bold;
   text-transform: normal;
   letter-spacing: -1px;
   line-height: 1.2em;
