--- a/app/views/home/_headlines.html.erb
+++ b/app/views/home/_headlines.html.erb
@@ -1,14 +1,15 @@
-<h2>Hassle-free service you can use right away</h2>
+<h2>Reliable service you can use right away</h2>
 
 <p>
-  We're System Administrators who built Simple DNS to fill our own needs.
-  We know how important is to have a reliable DNS service that you can
-  configure in no time, and we'd like to show how you too can take advantage of it.
+  We're Sysadmins who built EntryDNS to fill our own needs.
+  We think it's important to have a <em class="mk-point">fast and reliable</em> DNS service 
+  that <em class="mk-point">you can configure in no-time</em>, and we'd like to show how 
+  <em class="mk-point">you too can take advantage of it</em>.
 </p>
 
 <ul>
   <li>
-    Simple, intuitive interface you can use right away
+    With our intuitive interface, configuring is a breeze
   </li>
   <li>
     Friendly and reliable support you can count on
