--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,9 @@
   <div class="content">
     <div class="inner marketing-inner">
 
-      <h1>A free service created by sysadmins for sysadmins</h1>
+      <h1>
+        Free DNS service created by Sysadmins for Humans
+      </h1>
 
       <table class="marketing-duo">
         <tr>
