--- a/app/views/home/_headlines.html.erb
+++ b/app/views/home/_headlines.html.erb
@@ -2,20 +2,20 @@
 
 <p>
   We're Sysadmins who built EntryDNS to fill our own needs.
-  We think it's important to have a <em class="mk-point">fast and reliable</em> DNS service 
+  It's important to have a <em class="mk-point">fast and reliable</em> DNS service 
   that <em class="mk-point">you can configure in no-time</em>, and we'd like to show how 
   <em class="mk-point">you too can take advantage of it</em>.
 </p>
 
 <ul>
   <li>
-    With our intuitive interface, configuring is a breeze
+    Intuitive interface
   </li>
   <li>
-    Friendly and reliable support you can count on
+    Friendly and reliable support
   </li>
   <li>
-    Global infrastructure using fast and secure systems
+    Global infrastructure
   </li>
   <li>
     Full offsite backup, daily
