--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,7 @@
-<div class="block">
+<div class="block marketing-block">
   <div class="content">
+    <h1>Free DNS service for Humans Beings <em>created by Sysadmins</em></h1>
     <div class="inner marketing-inner">
-
-      <h1>
-        Free DNS service created by Sysadmins for Humans
-      </h1>
 
       <table class="marketing-duo">
         <tr>
