--- a/app/assets/stylesheets/overrides.css.erb
+++ b/app/assets/stylesheets/overrides.css.erb
@@ -18,6 +18,10 @@ body.errors #main .inner {
   margin-top: 15px;
 }
 
+#as_domains-active-scaffold .name-column {
+  font-weight: bold;
+}
+
 .flash .alert {
     border: 1px solid #bb9004;
     background: #f9c006 url(<%= image_path("messages/warning.png") %>) no-repeat 10px center;
