--- a/app/assets/stylesheets/theme/default.scss
+++ b/app/assets/stylesheets/theme/default.scss
@@ -1,6 +1,11 @@
+@import "compass/css3/border-radius";
+@import "compass/css3/box-shadow";
+@import "compass/css3/text-shadow";
+@import "compass/css3/images";
+
 body {
   color: #111111;
-  background: #c4c4c4 url('<%= image_path("theme/bgd.jpg") %>');
+  background: #c4c4c4 url(image-path("theme/bgd.jpg"));
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -25,10 +30,8 @@ hr {
 #header {
   height: 80px;
   background-color: #333333;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-  box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
-  -moz-box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
-  -webkit-box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
+  @include text-shadow(0 1px 1px rgba(0, 0, 0, 0.25));
+  @include box-shadow(inset 0 -5px 10px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3));
 }
 #header h1 {
   padding: 15px 5px;
@@ -52,13 +55,9 @@ hr {
 #main .block {
   padding-top: 0px;
   background-color: white;
-  text-shadow: 0 1px 0 white;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.3);
+  @include text-shadow(0 1px 0 white);
+  @include border-radius(6px);
+  @include box-shadow(0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.3));
 }
 #main .block .content {
   padding-top: 1px;
@@ -100,19 +99,12 @@ hr {
 }
 
 .secondary-navigation {
-  background: #e0e0e0 url('<%= image_path("theme/boxbar-background.png") %>') top;
+  background: #e0e0e0 url(image-path("theme/boxbar-background.png")) top;
   border-bottom-width: 0px;
-  -moz-border-radius-topleft: 6px;
-  -webkit-border-top-left-radius: 6px;
-  border-top-left-radius: 6px;
-  -moz-border-radius-topright: 6px;
-  -webkit-border-top-right-radius: 6px;
-  border-top-right-radius: 6px;
+  @include border-top-radius(6px);
 }
 .secondary-navigation li.first a, .secondary-navigation ul li.first {
-  -moz-border-radius-topleft: 6px;
-  -webkit-border-top-left-radius: 6px;
-  border-top-left-radius: 6px;
+  @include border-top-left-radius(6px);
 }
 .secondary-navigation ul li a:link, .secondary-navigation ul li a:visited, .secondary-navigation ul li a:hover, .secondary-navigation ul li a:active {
   text-decoration: none;
@@ -153,9 +145,7 @@ hr {
   text-shadow: none;
 }
 #footer .block {
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
+  @include box-shadow(none);
   background: none;
 }
 #footer p {
@@ -171,10 +161,8 @@ hr {
 #sidebar .block {
   padding-top: 2px;
   padding-bottom: 2px;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
+  @include border-radius(6px);
+  @include text-shadow(0 1px 0 rgba(255, 255, 255, 0.6));
 }
 #sidebar .block h4 {
   font-weight: normal;
@@ -184,26 +172,17 @@ hr {
   color: white;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
   background-color: rgba(0, 0, 0, 0.3);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, 0.15)), to(rgba(0, 0, 0, 0)));
-  background-image: -moz-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
-  -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
-  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
+  @include background-image(linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0)));
+  @include border-radius(6px);
+  @include box-shadow(inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3));
 }
 #sidebar .warning {
   padding-left: 10px;
   padding-right: 10px;
   color: #222222;
   background: #ffef4e;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.1);
+  @include border-radius(6px);
+  @include box-shadow(0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.1));
   border: 1px solid rgba(0, 0, 0, 0.3);
 }
 #sidebar h3 {
@@ -214,7 +193,7 @@ hr {
 #sidebar ul li {
   background-position: 0 11px;
   background-repeat: no-repeat;
-  background-image: url('<%= image_path("theme/arrow.png") %>');
+  background-image: url(image-path("theme/arrow.png"));
   border-bottom: 1px dashed #777777;
   list-style-type: none;
 }
@@ -235,22 +214,18 @@ hr {
 
 .pagination a, .pagination span {
   border: 1px solid #c3c4ba;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
+  @include border-radius(2px);
   margin-right: 5px;
   padding: 6px;
   min-width: 15px;
   text-align: center;
   background: #dddddd;
-  background-image: url('<%= image_path("theme/button-background.png") %>');
+  background-image: url(image-path("theme/button-background.png"));
   color: #111111;
 }
 .pagination a:hover {
   border: 1px solid #818171;
-  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+  @include box-shadow(0 0 4px rgba(0, 0, 0, 0.3));
 }
 .pagination span.current {
   background: #261f1f;
@@ -259,7 +234,7 @@ hr {
 }
 
 .pagination a:active {
-  background-image: url('<%= image_path("theme/button-background-active.png") %>');
+  background-image: url(image-path("theme/button-background-active.png"));
   outline: none;
 }
 
@@ -290,15 +265,11 @@ hr {
 .form input.text_field, .form textarea.text_area {
   width: 100%;
   border: 1px solid #dddddd;
-  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  @include box-shadow(inset 0 1px 3px rgba(0, 0, 0, 0.1));
 }
 .form input.button {
   background: #dddddd;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
+  @include border-radius(5px);
   border: 1px solid #c1c1c1;
   padding: 2px 5px;
   cursor: pointer;
@@ -319,30 +290,28 @@ hr {
 }
 
 .flash .message {
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
+  @include border-radius(3px);
   text-align: center;
   margin: 0 auto 15px;
   color: white;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
+  @include text-shadow(0 1px 0 rgba(0, 0, 0, 0.3));
 }
 .flash .message p {
   margin: 8px;
 }
 .flash .error, .flash .error-list {
   border: 1px solid #993624;
-  background: #cc4831 url('<%= image_path("messages/error.png") %>') no-repeat 10px center;
+  background: #cc4831 url(image-path("messages/error.png")) no-repeat 10px center;
 }
 .flash .warning {
   border: 1px solid #bb9004;
-  background: #f9c006 url('<%= image_path("messages/warning.png") %>') no-repeat 10px center;
+  background: #f9c006 url(image-path("messages/warning.png")) no-repeat 10px center;
 }
 .flash .notice {
   color: #28485e;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+  @include text-shadow(0 1px 0 rgba(255, 255, 255, 0.7));
   border: 1px solid #8a9daa;
-  background: #b8d1e2 url('<%= image_path("messages/notice.png") %>') no-repeat 10px center;
+  background: #b8d1e2 url(image-path("messages/notice.png")) no-repeat 10px center;
 }
 .flash .error-list {
   text-align: left;
@@ -376,44 +345,31 @@ ul.list li .item .avatar {
 #box .block {
   background: white;
   text-shadow: 0 1px 0 white;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.3);
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
+  @include box-shadow(0 0 1px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.3));
+  @include border-radius(6px);
 }
 #box .block h2 {
   background: #261f1f;
   color: white;
-  text-shadow: none;
-  -moz-border-radius-topleft: 6px;
-  -webkit-border-top-left-radius: 6px;
-  border-top-left-radius: 6px;
-  -moz-border-radius-topright: 6px;
-  -webkit-border-top-right-radius: 6px;
-  border-top-right-radius: 6px;
+  @include text-shadow(none);
+  @include border-top-radius(6px);
 }
 
 a.button, button.button {
-  background: #edeeed url('<%= image_path("theme/button-background.png") %>') top;
+  background: #edeeed url(image-path("theme/button-background.png")) top;
   border: 1px solid #c3c4ba;
   font-family: helvetica, arial, sans-serif;
   font-weight: normal;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  @include border-radius(3px);
+  @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.1));
 }
 a.button:link, a.button:visited, a.button:hover, a.button:active, button.button:link, button.button:visited, button.button:hover, button.button:active {
   font-weight: normal;
-  background: #edeeed url('<%= image_path("theme/button-background.png") %>') top;
+  background: #edeeed url(image-path("theme/button-background.png")) top;
 }
 
 a.button:active, button.button:active {
-  background: #eaeaea url('<%= image_path("theme/button-background-active.png") %>') top;
+  background: #eaeaea url(image-path("theme/button-background-active.png")) top;
   outline: none;
   margin-top: 1px;
   margin-bottom: -1px;
