--- a/app/views/home/_headlines.html.erb
+++ b/app/views/home/_headlines.html.erb
@@ -15,10 +15,10 @@
     Friendly and reliable support
   </li>
   <li>
-    Global infrastructure
+    Full offsite backup, daily
   </li>
   <li>
-    Full offsite backup, daily
+    Complete developers API's
   </li>
 </ul>
 
