--- a/app/views/fragments/_bottom.html.erb
+++ b/app/views/fragments/_bottom.html.erb
@@ -4,7 +4,7 @@
       <a href="#">Terms</a>
       <a href="#">Privacy</a>
       <a href="#">Contact</a>
-      &copy; <%= Time.now.year %> Nicolae Claudius
+      &copy; <%= Time.now.year %> EntryDNS Team
     </p>
   </div>      
 </div>
