--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,10 +6,10 @@
       <table class="marketing-duo">
         <tr>
           <td class="marketing-text">
-            <%= render :partial => 'headlines' %>
+            <%= render :partial => 'pages/home/headlines' %>
           </td>
           <td class="marketing-images">
-            <%= render :partial => 'slides' %>
+            <%= render :partial => 'pages/home/slides' %>
           </td>
         </tr>
       </table>
