--- a/app/views/fragments/_top.html.erb
+++ b/app/views/fragments/_top.html.erb
@@ -8,6 +8,7 @@
           <li><%= link_to 'Manage Domains', domains_path, :data => {:pjax => '#main'} %></li>
         <% else %>
           <li><%= link_to('Home', root_path, :data => {:pjax => '#main'}) %></li>
+          <li><%= link_to('About', page_path('about'), :data => {:pjax => '#main'}) %></li>
           <li><%#= link_to('About us', root_path, :data => {:pjax => '#main'}) %></li>
         <% end %>
         <li><%#= link_to('Help & Support', root_path, :data => {:pjax => '#main'}) %></li>
