--- a/app/views/pages/home/_headlines.html.erb
+++ b/app/views/pages/home/_headlines.html.erb
@@ -1,10 +1,9 @@
-<h2>Reliable service you can use right away</h2>
+<h2>A friendly service you can use right away</h2>
 
 <p>
-  We're Sysadmins who built EntryDNS to fill our own needs.
-  It's important to have a <em class="mk-point">fast and reliable</em> DNS service 
-  that <em class="mk-point">you can configure in no-time</em>, and we'd like to show how 
-  <em class="mk-point">you too can take advantage of it</em>.
+  We're two people passionate about technology and we built EntryDNS to fill our own needs,
+  a <em class="mk-point">fast, easy to use</em> service 
+  that takes care of <em class="mk-point">all your configuration needs</em>.
 </p>
 
 <ul>
