--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -1,7 +1,7 @@
 <div class="block">
   <div class="content">
     <div class="inner">
-      <h1>What a DNS is service and what can you use it for</h1>
+      <h1>We are two people passionate about technology</h1>
       <p>asd</p>
     </div>
   </div>
