--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,8 @@
 <div class="block">
   <div class="content">
     <div class="inner">
-      <h1>What a DNS is service and what can you use it for</h1>
-      <p>asd</p>
+      <h1>What a DNS service is, and what can you use it for</h1>
+      <p>Coming soon!</p>
     </div>
   </div>
 </div>
