--- a/app/views/fragments/_bottom.html.erb
+++ b/app/views/fragments/_bottom.html.erb
@@ -1,10 +1,10 @@
 <div id="footer">
   <div class="block">
     <p>
-      <a href="#">Terms</a>
-      <a href="#">Privacy</a>
-      <a href="#">Contact</a>
-      &copy; <%= Time.now.year %> EntryDNS Team
+      <%= link_to('Terms & Conditions', page_path('terms'), :data => {:pjax => '#main'}) %> | 
+      <%= link_to('Privacy Statement', page_path('privacy'), :data => {:pjax => '#main'}) %> | 
+      <%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %> | 
+      <%= link_to("&copy; #{Time.now.year} EntryDNS Team".html_safe, root_path, :data => {:pjax => '#main'}) %>
     </p>
   </div>      
 </div>
