--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,7 +1,7 @@
 <div class="block">
   <div class="content">
     <div class="inner">
-      <h1>Top 20 questions about EntryDNS</h1>
+      <h1>Privacy Statement</h1>
       <p>Coming soon!</p>
     </div>
   </div>
