--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -2,7 +2,7 @@
   <div class="content">
     <div class="inner">
       <h1>We are two people passionate about technology</h1>
-      <p>asd</p>
+      <p>Coming soon!</p>
     </div>
   </div>
 </div>
