--- a/app/views/fragments/_bottom.html.erb
+++ b/app/views/fragments/_bottom.html.erb
@@ -1,9 +1,9 @@
 <div id="footer">
   <div class="block">
     <p>
-      <%= link_to('Terms & Conditions', page_path('terms'), :data => {:pjax => '#main'}) %> | 
-      <%= link_to('Privacy Statement', page_path('privacy'), :data => {:pjax => '#main'}) %> | 
-      <%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %> | 
+      <%= link_to('Terms & Conditions', page_path('terms'), :data => {:pjax => '#main'}) %> &bullet;
+      <%= link_to('Privacy Statement', page_path('privacy'), :data => {:pjax => '#main'}) %> &bullet;
+      <%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %> &bullet;
       <%= link_to("&copy; #{Time.now.year} EntryDNS Team".html_safe, root_path, :data => {:pjax => '#main'}) %>
     </p>
   </div>      
