--- a/app/views/fragments/_bottom.html.erb
+++ b/app/views/fragments/_bottom.html.erb
@@ -2,7 +2,7 @@
   <div class="block">
     <p>
       <%= link_to('Terms & Conditions', page_path('terms'), :data => {:pjax => '#main'}) %> &bullet;
-      <%= link_to('Privacy Statement', page_path('privacy'), :data => {:pjax => '#main'}) %> &bullet;
+      <%= link_to('Privacy Policy', page_path('privacy'), :data => {:pjax => '#main'}) %> &bullet;
       <%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %> &bullet;
       <%= link_to("&copy; #{Time.now.year} EntryDNS Team".html_safe, root_path, :data => {:pjax => '#main'}) %>
     </p>
