--- a/app/assets/stylesheets/marketing.css.scss
+++ b/app/assets/stylesheets/marketing.css.scss
@@ -17,7 +17,7 @@
         padding-right: 30px;
         background-color: #261F1F;
         color: white;
-        em {
+        small {
             font-size: 26px;
             color: #3e3d4c;
             font-style: normal;
