--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,8 +1,13 @@
 <div class="block">
   <div class="content">
     <div class="inner">
+
       <h1>Contact us</h1>
-      <p>Coming soon!</p>
+
+      <p>
+        E-Mail address: <a href="mailto:support@entrydns.net">support@entrydns.net</a>
+      </p>
+
     </div>
   </div>
 </div>
