--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="block marketing-block">
   <div class="content">
-    <h1>Totally Free DNS service for Geeks <em>created by Geeks</em></h1>
+    <h1>Totally Free DNS service for Geeks <small>created by Geeks</small></h1>
     <div class="inner marketing-inner">
 
       <table class="marketing-duo">
