--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -1,8 +1,20 @@
 <div class="block">
   <div class="content">
-    <div class="inner">
-      <h1>We are two people passionate about technology</h1>
-      <p>Coming soon!</p>
+    <div class="inner team">
+      
+      <h1>Meet the founders</h1>
+
+      <table>
+        <tr>
+          <td class="bio">
+            <%= render :partial => 'pages/team/zooz' %>
+          </td>
+          <td class="bio">
+            <%= render :partial => 'pages/team/clyfe' %>
+          </td>
+        </tr>
+      </table>
+      
     </div>
   </div>
 </div>
