--- a/app/views/pages/team/_clyfe.html.erb
+++ b/app/views/pages/team/_clyfe.html.erb
@@ -11,7 +11,7 @@
   open source software for most problems.
 </p>
 <p>
-  You can find him online at:<br>
+  You can find him online at:
 </p>
 
 <ul>
