--- a/app/assets/stylesheets/marketing.css.scss
+++ b/app/assets/stylesheets/marketing.css.scss
@@ -8,14 +8,14 @@
 }
 
 #main .marketing-block {
-    background-color: #261F1F;
+    background-color: #333333;
     .content h1 {
         //text-align: center;
         font-size: 32px;
         //font-weight: bold;
         padding-left: 30px;
         padding-right: 30px;
-        background-color: #261F1F;
+        background-color: #333333;
         color: white;
         small {
             font-size: 26px;
