--- a/app/views/pages/home/_headlines.html.erb
+++ b/app/views/pages/home/_headlines.html.erb
@@ -1,7 +1,7 @@
 <h2>A friendly service you can use right away</h2>
 
 <p>
-  We're two people passionate about technology and we built EntryDNS to fill our own needs,
+  We're people passionate about technology and we built  to fill our own needs,
   a <em class="mk-point">fast, easy to use</em> service 
   that takes care of <em class="mk-point">all your configuration needs</em>.
 </p>
