--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -26,14 +26,14 @@
       <ol type="a">
         <li>
           Permission is granted to temporarily download one copy of the materials 
-          (information or software) on EntryDNS's web site for personal, 
+          (information or software) on EntryDNS web site for personal, 
           non-commercial transitory viewing only. This is the grant of a license, 
           not a transfer of title, and under this license you may not:
 
           <ol type="i">
             <li>modify or copy the materials;</li>
             <li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
-            <li>attempt to decompile or reverse engineer any software contained on EntryDNS's web site;</li>
+            <li>attempt to decompile or reverse engineer any software contained on EntryDNS web site;</li>
             <li>remove any copyright or other proprietary notations from the materials; or</li>
             <li>transfer the materials to another person or "mirror" the materials on any other server.</li>
           </ol>
@@ -49,7 +49,7 @@
 
       <ol type="a">
         <li>
-          The materials on EntryDNS's web site are provided "as is". EntryDNS makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, EntryDNS does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its Internet web site or otherwise relating to such materials or on any sites linked to this site.
+          The materials on EntryDNS web site are provided "as is". EntryDNS makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, EntryDNS does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its Internet web site or otherwise relating to such materials or on any sites linked to this site.
         </li>
       </ol>
 
@@ -58,7 +58,7 @@
       </h3>
 
       <p>
-        In no event shall EntryDNS or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on EntryDNS's Internet site, even if EntryDNS or a EntryDNS authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
+        In no event shall EntryDNS or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on EntryDNS Internet site, even if EntryDNS or a EntryDNS authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
       </p>
 
       <h3>
@@ -66,7 +66,7 @@
       </h3>
 
       <p>
-        The materials appearing on EntryDNS's web site could include technical, typographical, or photographic errors. EntryDNS does not warrant that any of the materials on its web site are accurate, complete, or current. EntryDNS may make changes to the materials contained on its web site at any time without notice. EntryDNS does not, however, make any commitment to update the materials.
+        The materials appearing on EntryDNS web site could include technical, typographical, or photographic errors. EntryDNS does not warrant that any of the materials on its web site are accurate, complete, or current. EntryDNS may make changes to the materials contained on its web site at any time without notice. EntryDNS does not, however, make any commitment to update the materials.
       </p>
 
       <h3>
@@ -90,7 +90,7 @@
       </h3>
 
       <p>
-        Any claim relating to EntryDNS's web site shall be governed by the laws of the State of United Kingdom without regard to its conflict of law provisions.
+        Any claim relating to EntryDNS web site shall be governed by the laws of the United Kingdom without regard to its conflict of law provisions.
       </p>
 
     </div>
