--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,40 @@
 <div class="block">
   <div class="content">
     <div class="inner">
-      <h1>What a DNS service is, and what can you use it for</h1>
-      <p>Coming soon!</p>
+
+      <h1>About EntryDNS</h1>
+
+      <p>
+        EntryDNS delivers a totally free DNS hosting to our community. 
+        <br />
+        Our aim is to provide a very friendly, but powerful service for your DNS management.
+      </p>
+
+      <h2>What you can use it for</h2>
+
+      <p>
+        This allows you to simply create a host or host your own domains, 
+        which can be managed from the web application or using our API's (simple API and complete REST API). 
+        <br />
+        The service gives you a total control of your DNS records without any restrictions.
+      </p>
+
+      <h2>How can you benefit from this</h2>
+
+      <ul>
+        <li>Have a total control of your own domain and records</li>
+        <li>Host your own site using your own internet connection</li>
+        <li>Access your computer using a domain name instead of a numerical IP address</li>
+        <li>Use your home dynamic IP and always have your domain pointing to it</li>
+        <li>Spend your money on more important things</li>
+      </ul>
+
+      <p>
+        We are open to new ideas or suggestions how to make the service better for you to use. 
+        <br />
+        We are interested to hear from people who would like to contribute in any way.
+      </p>
+
     </div>
   </div>
 </div>
