--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,3 +17,24 @@
     </div>
   </div>
 </div>
+
+<div class="block">
+  <div class="content">
+    <div class="inner">
+
+      <table class="marketing-duo">
+        <tr>
+          <td class="marketing-text">
+            <h2>Benefits</h2>
+            <%= render 'pages/fragments/benefits' %>
+          </td>
+          <td class="marketing-images">
+            <h2>Features</h2>
+            <%= render 'pages/fragments/features' %>
+          </td>
+        </tr>
+      </table>
+
+    </div>
+  </div>
+</div>
