--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,14 +20,8 @@
       </p>
 
       <h2>How can you benefit from this</h2>
-
-      <ul>
-        <li>Have a total control of your own domain and records</li>
-        <li>Host your own site using your own internet connection</li>
-        <li>Access your computer using a domain name instead of a numerical IP address</li>
-        <li>Use your home dynamic IP and always have your domain pointing to it</li>
-        <li>Spend your money on more important things</li>
-      </ul>
+      
+      <%= render 'pages/fragments/benefits' %>
 
       <p>
         We are open to new ideas or suggestions how to make the service better for you to use. 
