--- a/app/views/pages/home/_headlines.html.erb
+++ b/app/views/pages/home/_headlines.html.erb
@@ -21,12 +21,4 @@
   </li>
 </ul>
 
-<div class="action">
-
-  <%= image_tag 'marketing/arrow_left.png' %>
-  <%= link_to new_user_registration_path, :style => 'text-decoration: none' do %>
-    <strong>Create an Account Now</strong><br>
-    <em>It's free, sign up in 60 seconds.</em>
-  <% end %>
-
-</div>
+<%= render :partial => 'pages/fragments/action' %>
