--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,6 +27,8 @@
           <td class="marketing-text">
             <h2>Benefits</h2>
             <%= render 'pages/fragments/benefits' %>
+            <br /><br /><br /><br />
+            <%= render :partial => 'pages/fragments/action' %>
           </td>
           <td class="marketing-images">
             <h2>Features</h2>
