--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,12 @@
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
         <%= devise_error_messages! %>
 
+        <div><%= f.label :first_name %><br />
+          <%= f.text_field :first_name %></div>
+
+        <div><%= f.label :last_name %><br />
+          <%= f.text_field :last_name %></div>
+
         <div><%= f.label :email %><br />
           <%= f.email_field :email %></div>
 
