--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,14 @@
-<div class="block marketing-block">
+<div class="block home-page-block">
   <div class="content">
     <h1>Totally Free DNS service for Geeks <small>created by Geeks</small></h1>
-    <div class="inner marketing-inner">
+    <div class="inner home-page-inner">
 
-      <table class="marketing-duo">
+      <table class="home-page-duo">
         <tr>
-          <td class="marketing-text">
+          <td class="home-page-text">
             <%= render :partial => 'pages/home/headlines' %>
           </td>
-          <td class="marketing-images">
+          <td class="home-page-images">
             <%= render :partial => 'pages/home/slides' %>
           </td>
         </tr>
@@ -22,15 +22,15 @@
   <div class="content">
     <div class="inner">
 
-      <table class="marketing-duo">
+      <table class="home-page-duo">
         <tr>
-          <td class="marketing-text">
+          <td class="home-page-text">
             <h2>Benefits</h2>
             <%= render 'pages/fragments/benefits' %>
             <br /><br /><br /><br />
             <%= render :partial => 'pages/fragments/action' %>
           </td>
-          <td class="marketing-images">
+          <td class="home-page-images">
             <h2>Features</h2>
             <%= render 'pages/fragments/features' %>
           </td>
