--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -6,12 +6,12 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tag %>
   </head>
-  <body class="marketing">
+  <body class="home-page">
 
     <div id="container">
       <%= render :partial => 'fragments/top' %>
       <div id="wrapper" class="wat-cf">
-        <div id="main" class="marketing-main" data-pjax-container="true">
+        <div id="main" class="home-page-main" data-pjax-container="true">
           <%= flash_display 'flash' %>
           <%= yield %>
         </div>
