--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,17 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hello <%= @resource.name %>!</p>
 
 <p>Someone has requested a link to change your password, and you can do this through the link below.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p>
+  <%= link_to 'Change my password', 
+    edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %>
+</p>
+
+<p>
+  If you cannot see the link copy and paste the following address in your browser address bar:<br />
+  <%= edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %>
+</p>
+
 
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
