--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,12 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hello <%= @resource.name %>!</p>
 
 <p>Your account has been locked due to an excessive amount of unsuccessful sign in attempts.</p>
 
 <p>Click the link below to unlock your account:</p>
 
 <p><%= link_to 'Unlock my account', unlock_url(@resource, :unlock_token => @resource.unlock_token) %></p>
+
+<p>
+  If you cannot see the link copy and paste the following address in your browser address bar:<br />
+  <%= unlock_url(@resource, :unlock_token => @resource.unlock_token) %>
+</p>
